Working on 9.22. New entries component. Changed eslint config a bit.

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,8 +18,30 @@
       ],
       "@typescript-eslint/no-explicit-any": 1,
       "no-case-declarations": 0,
-      "react/prop-types": 0
-    },
+      "react/prop-types": 0,
+      "indent": [
+          "error",
+          2  
+      ],
+      "linebreak-style": [
+          "error",
+          "unix"
+      ],
+      "quotes": [
+          "error",
+          "single"
+      ],
+     
+      "eqeqeq": "error",
+      "no-trailing-spaces": "error",
+      "object-curly-spacing": [
+          "error", "always"
+      ],
+      "arrow-spacing": [
+          "error", { "before": true, "after": true }
+      ],
+      "no-console": 0
+  },
     "settings": {
       "react": {
         "pragma": "React",
